# pewpew-asteroids

./: .gitignore  CMakeLists.txt  README.md  asteroids-linux  build.sh  momstaller.sh  windows-toolchain.cmake
src/: asteroids.cpp  asteroids.h  constants.h  main.cpp  player.cpp  player.h  projectile.cpp  projectile.h  ship_bytes.h
